[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
xlrd = "^1.2"
XlsxWriter = "^1.2"
openpyxl = "^2.6"
colorlog = "^4.0"
coloredlogs = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
logbook = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
